--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -100,22 +104,29 @@
 	</modules>
 
 	<properties>
+		<!-- compiling -->
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<aspectj.version>1.9.1</aspectj.version>
+
+		<!-- misc -->
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<log4j.version>2.11.1</log4j.version>
 		<junit.version>4.12</junit.version>
 		<spring.boot.version>2.0.3.RELEASE</spring.boot.version>
 		<spring.version>5.0.7.RELEASE</spring.version>
-		<aspectj.version>1.9.1</aspectj.version>
 
-		<!-- nexus repositry -->
-		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
-		<nexus.release.host>http://5.249.148.46:8081/repository/spot-release/</nexus.release.host>
+		<!-- GPG -->
+		<gpg.keyname>${env.GPG_KEY}</gpg.keyname>
+		<gpg.passphrase>${env.GPG_PWD}</gpg.passphrase>
+
+		<!-- nexus repository -->
+		<nexus.snapshot.host>http://nexus.spot-next.io:8081/repository/spot-snapshot/</nexus.snapshot.host>
+		<nexus.release.host>http://nexus.spot-next.io:8081/repository/spot-release/</nexus.release.host>
 	</properties>
 
 	<distributionManagement>
@@ -480,6 +491,15 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
 					<version>1.6</version>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 
 				<!-- ECLIPSE FIX -->
