--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>build-tools</artifactId>
-	<name>The spot framework build tools</name>
+	<name>${project.groupId}:${project.artifactId}</name>
 
 	<parent>
 		<groupId>io.spotnext</groupId>
