--- a/pom.xml
+++ b/pom.xml
@@ -144,15 +144,15 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
 		<!-- <snapshotRepository> -->
-		<!-- <id>spot-nexus-snapshot</id> -->
-		<!-- <url>${nexus.snapshot.host}</url> -->
-		<!-- <uniqueVersion>true</uniqueVersion> -->
+		<!-- <id>ossrh</id> -->
+		<!-- <url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
 		<!-- </snapshotRepository> -->
+		<snapshotRepository>
+			<id>spot-nexus-snapshot</id>
+			<url>${nexus.snapshot.host}</url>
+			<uniqueVersion>true</uniqueVersion>
+		</snapshotRepository>
 	</distributionManagement>
 
 	<build>
