--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.spotnext</groupId>
+	<groupId>io.spot-next</groupId>
 	<artifactId>spot-framework</artifactId>
 	<version>1.0-beta2-SNAPSHOT</version>
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -40,10 +40,10 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 					</plugin>
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-					</plugin>
+					<!-- <plugin> -->
+					<!-- <groupId>org.sonatype.plugins</groupId> -->
+					<!-- <artifactId>nexus-staging-maven-plugin</artifactId> -->
+					<!-- </plugin> -->
 				</plugins>
 			</build>
 		</profile>
@@ -144,14 +144,9 @@
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-		<!-- <snapshotRepository> -->
-		<!-- <id>ossrh</id> -->
-		<!-- <url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
-		<!-- </snapshotRepository> -->
 		<snapshotRepository>
-			<id>spot-nexus-snapshot</id>
-			<url>${nexus.snapshot.host}</url>
-			<uniqueVersion>true</uniqueVersion>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -168,7 +163,7 @@
 			<plugins>
 				<!-- RESOURCE GENERATION -->
 				<plugin>
-					<groupId>io.spotnext</groupId>
+					<groupId>io.spot-next</groupId>
 					<artifactId>spot-maven-plugin</artifactId>
 					<version>1.0-beta2-SNAPSHOT</version>
 					<executions>
@@ -521,7 +516,7 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>io.spotnext</groupId>
+										<groupId>io.spot-next</groupId>
 										<artifactId>spot-maven-plugin</artifactId>
 										<versionRange>
 											[1.0-SNAPSHOT,)
@@ -536,7 +531,7 @@
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>io.spotnext</groupId>
+										<groupId>io.spot-next</groupId>
 										<artifactId>spot-maven-plugin</artifactId>
 										<versionRange>
 											[1.0-SNAPSHOT,)
