--- a/spot-commerce-base/pom.xml
+++ b/spot-commerce-base/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>io.spotnext</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -19,7 +19,7 @@
 		<plugins>
 			<!-- RESOURCE GENERTATION -->
 			<plugin>
-				<groupId>io.spotnext</groupId>
+				<groupId>io.spot-next</groupId>
 				<artifactId>spot-maven-plugin</artifactId>
 			</plugin>
 
@@ -48,7 +48,7 @@
 					<properties>
 						<property>
 							<name>listener</name>
-							<value>io.spotnext.core.testing.SpotJunitRunListener</value>
+							<value>io.spot-next.core.testing.SpotJunitRunListener</value>
 						</property>
 					</properties>
 				</configuration>
@@ -71,7 +71,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 			<exclusions>
