--- a/spot-core-base-models/pom.xml
+++ b/spot-core-base-models/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>io.spotnext</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -54,7 +54,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
