--- a/spot-core-model-infrastructure/pom.xml
+++ b/spot-core-model-infrastructure/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>io.spotnext</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -54,14 +54,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-support</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
 
 		<!-- dynamic load time weaving support -->
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-instrumentation</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
