--- a/spot-core-shell/pom.xml
+++ b/spot-core-shell/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>io.spotnext</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -43,7 +43,7 @@
 					<properties>
 						<property>
 							<name>listener</name>
-							<value>io.spotnext.core.testing.SpotJunitRunListener</value>
+							<value>io.spot-next.core.testing.SpotJunitRunListener</value>
 						</property>
 					</properties>
 				</configuration>
@@ -66,12 +66,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
