--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -6,7 +6,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>io.spotnext</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -19,7 +19,7 @@
 		<plugins>
 			<!-- RESOURCE GENERTATION -->
 			<plugin>
-				<groupId>io.spotnext</groupId>
+				<groupId>io.spot-next</groupId>
 				<artifactId>spot-maven-plugin</artifactId>
 			</plugin>
 
@@ -48,7 +48,7 @@
 					<properties>
 						<property>
 							<name>listener</name>
-							<value>io.spotnext.core.testing.SpotJunitRunListener</value>
+							<value>io.spot-next.core.testing.SpotJunitRunListener</value>
 						</property>
 					</properties>
 				</configuration>
@@ -81,17 +81,17 @@
 	<dependencies>
 		<!-- spot modules -->
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-base-models</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-support</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
