--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>maven-plugin</packaging>
 
 	<parent>
-		<groupId>io.spotnext</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
@@ -65,7 +65,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>io.spotnext</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
 			<version>1.0-beta2-SNAPSHOT</version>
 			<exclusions>
