--- a/spot-core-model-infrastructure/pom.xml
+++ b/spot-core-model-infrastructure/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-beta2-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<build>
@@ -56,14 +56,14 @@
 		<dependency>
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-support</artifactId>
-			<version>1.0-beta2-SNAPSHOT</version>
+			<version>${revision}</version>
 		</dependency>
 
 		<!-- dynamic load time weaving support -->
 		<dependency>
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-instrumentation</artifactId>
-			<version>1.0-beta2-SNAPSHOT</version>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
