--- a/spot-instrumentation/pom.xml
+++ b/spot-instrumentation/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-beta2-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<licenses>
