--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-beta2-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<build>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>1.0-beta2-SNAPSHOT</version>
+			<version>${revision}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.aspectj</groupId>
