--- a/spot-spring-web-support/pom.xml
+++ b/spot-spring-web-support/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-beta2-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<build>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core</artifactId>
-			<version>1.0-beta2-SNAPSHOT</version>
+			<version>${revision}</version>
 		</dependency>
 
 		<!-- spring -->
