--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ addons:
 
 deploy:
   provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -Dprofile=release clean deploy -Drevision=$TRAVIS_TAG-`date +%Y%m%d`-`git log --pretty=format:'%h' -n 1`"
   skip_cleanup: true
   on:
-    tags: false
+    tags: true
 
 notifications:
   email:
