--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ before_install:
 #    build_command:   "mvn -DskipTests=true compile"
 #    branch_pattern: master
 
+install:
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean install"
+
 deploy:
   - provider: script
     script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn -Dprofile=release clean deploy"
