--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ before_install:
 #    build_command:   "mvn -DskipTests=true compile"
 #    branch_pattern: master
 
-install:
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean install"
+script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn clean verify"
 
 deploy:
   - provider: script
