--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 before_install:
   - openssl aes-256-cbc -K $encrypted_2dffe6d9f24e_key -iv $encrypted_2dffe6d9f24e_iv -in keyring.gpg.enc -out keyring.gpg -d
   - gpg --import keyring.gpg
+  - cp .travis.settings.xml $HOME/.m2/settings.xml
 #  - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
 
 #addons:
@@ -26,9 +27,7 @@ before_install:
 #    build_command:   "mvn -DskipTests=true compile"
 #    branch_pattern: master
 
-before_install: "cp .travis.settings.xml $HOME/.m2/settings.xml"
-
-install: -
+install: true
 
 script: "mvn clean verify"
 
