--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ cache:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_2dffe6d9f24e_key -iv $encrypted_2dffe6d9f24e_iv -in keyring.gpg.enc -out keyring.gpg -d
+  - gpg --version
   - gpg --import keyring.gpg
   - cp .travis.settings.xml $HOME/.m2/settings.xml
 #  - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
