travis gpg fix 3

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.6</version>
 						<configuration>
+							<gpgArguments>
+							</gpgArguments>
 						</configuration>
 					</plugin>
 				</plugins>
