--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ cache:
     - ~/.m2/repository
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_2dffe6d9f24e_key -iv $encrypted_2dffe6d9f24e_iv -in keyring.gpg.enc -out keyring.gpg -d
-  - gpg --import keyring.gpg
+  - openssl aes-256-cbc -K $encrypted_2dffe6d9f24e_key -iv $encrypted_2dffe6d9f24e_iv -in codesigning.asc.enc -out codesigning.asc -d
+  - gpg --fast-import codesigning.asc
   - gpg --list-keys
   - cp .travis.settings.xml $HOME/.m2/settings.xml
 #  - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
