--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
 		<module>spot-commerce-base</module>
 		<module>spot-cms-base</module>
 		<!-- <module>spot-mail</module> -->
+		<module>spot-archetype-simple</module>
 	</modules>
 
 	<properties>
