--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -37,7 +37,7 @@ hibernate.cache.region.factory_class=ehcache
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:file:data/store/spot-core.db
+database.jdbc.url=jdbc:hsqldb:file:data/store/spot.db
 database.jdbc.username=sa
 database.jdbc.password=
 
