--- a/pom.xml
+++ b/pom.xml
@@ -304,7 +304,7 @@
 						<preserveAllLocals>true</preserveAllLocals>
 						<proceedOnError>true</proceedOnError>
 						<!-- <Xreweavable>true</Xreweavable> -->
-						
+
 					</configuration>
 					<executions>
 						<execution>
@@ -531,20 +531,21 @@
 						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 						<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						<stagingProfileId>5f2e64bdcef503</stagingProfileId>
+						<stagingDescription>spOt stating repo</stagingDescription>
 					</configuration>
 					<executions>
 						<execution>
-							<id>default-deploy</id>
+							<id>sonatype deploy</id>
 							<phase>deploy</phase>
 							<goals>
 								<goal>deploy</goal>
 							</goals>
 						</execution>
 						<execution>
-							<id>default-release</id>
+							<id>sonatype close</id>
 							<phase>deploy</phase>
 							<goals>
-								<goal></goal>
+								<goal>close</goal>
 							</goals>
 						</execution>
 					</executions>
