--- a/spot-archetype-simple/.project
+++ b/spot-archetype-simple/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spot-archetype-simple</name>
+	<name>spot-sample-simple</name>
 	<comment></comment>
 	<projects>
 	</projects>
