--- a/spot-archetype-simple/pom.xml
+++ b/spot-archetype-simple/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>spot-archetype-simple</artifactId>
+	<artifactId>spot-sample-simple</artifactId>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<packaging>jar</packaging>
 
@@ -56,6 +56,14 @@
 			</plugin>
 
 			<!-- RELEASE -->
+			<!-- skip the deployment for this project, it's just a sample -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 
 			<!-- ECLIPSE SETTINGS -->
 			<plugin>
