--- a/.travis.yml
+++ b/.travis.yml
@@ -38,13 +38,13 @@ script: "mvn -T 4 -q clean verify findbugs:check"
 
 deploy:
   - provider: script
-    script: "mvn -T 4 -P travis,release -Dmaven.test.skip=true clean install deploy"
+    script: "mvn -P travis,release -Dmaven.test.skip=true clean install deploy"
     skip_cleanup: true
     on:
       branch: develop
       tags: false
   - provider: script
-    script: "mvn -T 4 -P travis,release -Dmaven.test.skip=true clean install deploy nexus-staging:close -Drevision=$TRAVIS_TAG-`date +%Y%m%d`-`git log --pretty=format:'%h' -n 1`"
+    script: "mvn -P travis,release -Dmaven.test.skip=true clean install deploy nexus-staging:close -Drevision=$TRAVIS_TAG-`date +%Y%m%d`-`git log --pretty=format:'%h' -n 1`"
     skip_cleanup: true
     on:
       branch: master
