travis fix script attempt 1

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,13 +38,13 @@ script: "mvn -T 4 -q clean verify findbugs:check"
 
 deploy:
   - provider: script
-    script: travis_wait 30 mvn -q -P travis,release -Dmaven.test.skip=true clean install deploy
+    script: "travis_wait 30 mvn -q -P travis,release -Dmaven.test.skip=true clean install deploy"
     skip_cleanup: true
     on:
       branch: develop
       tags: false
   - provider: script
-    script: travis_wait 30 mvn -q -P travis,release -Dmaven.test.skip=true clean install deploy -Drevision=$TRAVIS_TAG-`date +%Y%m%d`-`git log --pretty=format:'%h' -n 1`
+    script: "travis_wait 30 mvn -q -P travis,release -Dmaven.test.skip=true clean install deploy -Drevision=$TRAVIS_TAG-`date +%Y%m%d`-`git log --pretty=format:'%h' -n 1`"
     skip_cleanup: true
     on:
       branch: master
