fixed flatten config

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
 				<version>1.0.0</version>
 				<configuration>
 					<updatePomFile>true</updatePomFile>
+					<flattenMode>oss</flattenMode>
 				</configuration>
 				<executions>
 					<execution>
