changed test db hsql inmemory

--- a/spot-core/src/test/resources/core-testing.properties
+++ b/spot-core/src/test/resources/core-testing.properties
@@ -22,6 +22,6 @@ service.persistence.hibernate.format_sql=false
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:file:target/data/store/spot-core_testing.db
+database.jdbc.url=jdbc:hsqldb:mem:spot-core_testing
 database.jdbc.username=sa
 database.jdbc.password=
