added simple archetype

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.spot-next</groupId>
 	<artifactId>spot-framework</artifactId>
@@ -59,7 +58,7 @@
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.6</version>
 						<configuration>
-							<gpgArguments combine.self="override" />
+							<gpgArguments combine.self="override"/>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -130,12 +129,14 @@
 		<module>spot-cms-base</module>
 		<!-- <module>spot-mail</module> -->
 		<!-- <module>spot-sample-simple</module> -->
-	</modules>
+    <module>spot-archetype-simple</module>
+  </modules>
 
 	<properties>
 		<revision>1.0-SNAPSHOT</revision>
 
 		<!-- compiling -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -256,6 +257,15 @@
 
 				<!-- COMPILING -->
 				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+				
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.0</version>
@@ -329,7 +339,7 @@
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-
+				
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
@@ -360,7 +370,7 @@
 						</execution>
 					</executions>
 				</plugin>
-
+				
 				<!-- CODE ANALYSIS -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -574,7 +584,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore />
+										<ignore/>
 									</action>
 								</pluginExecution>
 								<pluginExecution>
