--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.6</version>
 						<configuration>
-							<gpgArguments combine.self="override"/>
+							<gpgArguments combine.self="override" />
 						</configuration>
 					</plugin>
 				</plugins>
@@ -129,8 +129,8 @@
 		<module>spot-cms-base</module>
 		<!-- <module>spot-mail</module> -->
 		<!-- <module>spot-sample-simple</module> -->
-    <module>spot-archetype-simple</module>
-  </modules>
+		<module>archetype-empty</module>
+	</modules>
 
 	<properties>
 		<revision>1.0-SNAPSHOT</revision>
@@ -160,6 +160,14 @@
 		<nexus.snapshot.host>http://nexus.spot-next.io/repository/spot-snapshot/</nexus.snapshot.host>
 		<nexus.release.host>http://nexus.spot-next.io/repository/spot-release/</nexus.release.host>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>mvnrepository</id>
+			<name>mvnrepository</name>
+			<url>http://www.mvnrepository.com</url>
+		</repository>
+	</repositories>
 
 	<distributionManagement>
 		<repository>
@@ -264,7 +272,7 @@
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-				
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -339,7 +347,7 @@
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-				
+
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
@@ -370,7 +378,7 @@
 						</execution>
 					</executions>
 				</plugin>
-				
+
 				<!-- CODE ANALYSIS -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -552,13 +560,13 @@
 								<goal>deploy</goal>
 							</goals>
 						</execution>
-<!-- 						<execution> -->
-<!-- 							<id>sonatype close</id> -->
-<!-- 							<phase>deploy</phase> -->
-<!-- 							<goals> -->
-<!-- 								<goal>close</goal> -->
-<!-- 							</goals> -->
-<!-- 						</execution> -->
+						<!-- <execution> -->
+						<!-- <id>sonatype close</id> -->
+						<!-- <phase>deploy</phase> -->
+						<!-- <goals> -->
+						<!-- <goal>close</goal> -->
+						<!-- </goals> -->
+						<!-- </execution> -->
 					</executions>
 				</plugin>
 
@@ -584,7 +592,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore/>
+										<ignore />
 									</action>
 								</pluginExecution>
 								<pluginExecution>
