--- a/spot-sample-simple/pom.xml
+++ b/spot-sample-simple/pom.xml
@@ -77,7 +77,7 @@
 		<dependency>
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>${revision}</version>
 		</dependency>
 
 	</dependencies>
