updated archtype-empty (repo settings and versions)

--- a/archetype-empty/src/main/resources/archetype-resources/pom.xml
+++ b/archetype-empty/src/main/resources/archetype-resources/pom.xml
@@ -11,18 +11,32 @@
 	<parent>
 		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0.2-BETA-20180809-d30d1c6</version>
+		<version>1.0.3-BETA-20180811-5cf1f7a</version>
 	</parent>
 
 	<properties>
-		<spot.version>1.0.2-BETA-20180809-d30d1c6</spot.version>
+		<spot.version>1.0.3-BETA-20180811-5cf1f7a</spot.version>
 	</properties>
 
 	<repositories>
 		<repository>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+			<layout>default</layout>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		
+		<!-- eclipse lifecycle plugin is only available here -->
+		<repository>
 			<id>mvnrepository</id>
 			<name>mvnrepository</name>
 			<url>http://www.mvnrepository.com</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 
