--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
 
 install: true
 
-script: "mvn -T 4 -q clean install findbugs:check"
+script: "mvn clean install findbugs:check"
 
 deploy:
   - provider: script
