--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -148,6 +148,16 @@
 			<artifactId>byte-buddy</artifactId>
 			<version>1.8.13</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.9.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
+			<version>2.9.6</version>
+		</dependency>
 
 		<!-- spring -->
 		<dependency>
