--- a/spot-sample-simple/pom.xml
+++ b/spot-sample-simple/pom.xml
@@ -80,5 +80,10 @@
 			<version>${revision}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.simplejavamail</groupId>
+			<artifactId>simple-java-mail</artifactId>
+			<version>5.0.3</version>
+		</dependency>
 	</dependencies>
 </project>
