--- a/.travis.yml
+++ b/.travis.yml
@@ -57,3 +57,9 @@ notifications:
       - meister.fuchs@gmail.com
     on_success: change
     on_failure: always
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/02860416326b2469fdcc
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
