--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>javax.el</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>2.3</version>
+		</dependency>
 
 		<!-- spring -->
 		<dependency>
