--- a/spot-cms-base/pom.xml
+++ b/spot-cms-base/pom.xml
@@ -91,5 +91,18 @@
 			<version>2.3.23</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.sparkjava</groupId> -->
+		<!-- <artifactId>spark-template-thymeleaf</artifactId> -->
+		<!-- <version>2.7.1</version> -->
+		<!-- </dependency> -->
+
+
 	</dependencies>
 </project>
